---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 2025-04-30

  Russian locale added (by Shadow_Man)

---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2025-04-22

  Fix a UI glitch introduced in 0.1.7

---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2025-04-18

  Remove a crash when pasting blueprints made with a different mod config.

---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2025-04-18

  Ultracube compatibility
  Possibly fix multiplayer?  Dunno, haven't tested.

---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2025-03-04

  Maybe-fixed a bug causing incompatibility with AAI programmable vehicles.

---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2025-03-03

  Oh, there is Even Picker Dollies for 2.0, thanks @arighteousgod.
  Restored and fixed the code so that Recipe Combinators can't be dollied.
  (Maybe eventually, but for now it's not supported because of all the subentities)

---------------------------------------------------------------------------------------------------
Version: 0.1.3 (was tagged 0.1.2, whoops)
Date: 2025-03-03

  Remove disable_picker_dollies.lua.  There's no picker dollies for 2.0 anyway.
  
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2025-03-02

  Public release.  Let me know what should be changed.

---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2025-02-24

  Even more GUI options!  It should have a dropdown, but it doesn't.
