@@ -1,6 +1,6 @@
 {
   "name": "recipe_combinator",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "title": "Recipe Combinator",
   "author": "bitwiseshiftleft",
   "factorio_version": "2.0",
