@@ -22,8 +22,14 @@ tooltip_which_machines=Only consider recipes from these machines.  Recipes from 
 label_one=Show info for one recipe:
 include_disabled=Include unresearched recipes
 include_hidden=Include hidden recipes
+include_all_surfaces=Include recipes for all surfaces
+tooltip_include_all_surfaces=When checked, show recipes even if they cannot be crafted here, e.g. show recipes for turbo belts even if the combinator is on Nauvis.
 tooltip_section_one=The combinator will pick only one recipe, that is supported by one of the listed machines, from its input.  The recipe can either be given as a signal, or it can be one recipe that has a given signal as an ingredient or product, according to what is enabled in the input section.
 tooltip_section_all=The combinator will pick only one item/fluid from its input, but will output information about all recipes for that item/fluid.
+tooltip_section_input=Recipe combinators look through their inputs, and choose one of the input signals to give you information about.  This section tells it which signals to look at.
+tooltip_input_recipe=When checked, the combinator will choose a recipe signal from its input, and give you information about that recipe.
+tooltip_input_ingredient=When checked, the combinator will choose an item/fluid signal from its input, and give you information about recipe(s) that [font=default-bold]consume[/font] that item/fluid.
+tooltip_input_product=When checked, the combinator will choose an item/fluid signal from its input, and give you information about recipe(s) that [font=default-bold]produce[/font] that item/fluid.
 label_input=Input signals:
 label_all=Show info for one item, fluid or recipe:
 label_recap=Show info on what signal was selected:
